--- a/home.html
+++ b/home.html
@@ -6,6 +6,8 @@
     <body>
         <nav>
             <a href="{% url 'home' %}">Home</a>
+            <a href="{% url 'about' %)">About Us</a>
+            <a href="{{% url 'menut' %">Menu</a>
         </nav>
 
         <h1>Welcome to {{ reestaurant_name }}</h1>
