--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
             <style>
                 body{
                 font-family: Arial, sans-serif;
-                background-color: #fafafa;
+                background-color: #f8f9fa;
                 color: #333;
                 margin: 0;
                 padding: 0;
