--- a/home.html
+++ b/home.html
@@ -11,6 +11,12 @@
                 padding: 0;
                 text-align: center;
                 }
+                header{
+                background-color: #ff6347;
+                color: white;
+                text-align: center;
+                padding: 20px 0;
+                }
 
                 nav{
                 background-color: #333;
